# pro_1

./: .env  pyproject.toml
pro_1/: main.py
pro_1/config/: db.py  seed.py  settings.py
pro_1/models/: Schemas.py  product.py  users.py
pro_1/routes/: cart_routes.py  product_routes.py  user_routes.py
pro_1/services/: cart_service.py  product_service.py  user_service.py
pro_1/utils/: auth.py
